Mon Dec 17 13:52:35 2012  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.16

Mon Dec 17 13:45:21 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/eval.c: when forloop (sum/prod/for) is with floats then check
	  for overrun, and if within 2^-20 times the step size, then still
	  execute the last body (assume things were because of roundoff
	  error), this makes things like for n=0 to 1 by 0.1 actually work
	  as expected.

	* src/mpwrap.[ch], src/eval.c, src/funclib.c, src/matop.c: minor
	  optimization in make_float and new macro to check real part for
	  being floating point

	* src/geniustests.txt, src/testfourier.gel: update testsuite

Tue Dec 11 00:10:02 2012  Jiri (George) Lebl <jirka@5z.com>

	* configure.in, src/Makefile.am: exorcise last vestiges of the
	  linpack inclusion fiasco, and update to new automake initialization
	  format, and also create xz archives on dist

Mon Dec 10 20:58:42 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: add ability to fit dependent axis automatically
	  for surface plots.  When z is not specified by x and y limits are
	  specified for surface plot functions, z is figured out

Mon Dec 10 16:20:53 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c: when number of digits of labels is too much
	  use the scientific notation.  Avoids ugly huge numbers.
	  Also make the graph slightly bigger (700x500) and in lineplot mode
	  make the margins bigger so that we don't lose any digits on axes
	  when zooming out or in.  Also fixup labels for gradient.  Gradient
	  is now done only for the range of the function not the whole range
	  that makes it more useful.

	* gtkextra/gtkplot.c, gtkextra/gtkplot3d.c, gtkextra/gtkplotsurface.c:
	  minor cleanup and fix crash when labels too big.  Also fix gradient
	  label style settings, and zero out data we just freed.

Fri Dec 07 21:36:50 2012  Jiri (George) Lebl <jirka@5z.com>

	* src/graphing.c, src/gnome-genius.c: kill our own overwrite dialog