@@ -1,3 +1,10 @@
+Mon Dec 17 15:15:44 2012  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/graphing.c: bit of post release cleanup
+
+	* help/C/genius.xml: do some fixes, add help about comments and
+	  the new way that for loops with floats work.
+
 Mon Dec 17 13:52:35 2012  Jiri (George) Lebl <jirka@5z.com>
 
 	* Release 1.0.16
